# gtkaml

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  gtkaml-1.0.pc.in  gtkaml.geany  gtkamlc.1  meson.build  meson_options.txt
data/: Makefile.am  (+4 more)
examples/: Makefile.am  example-gen-introspect  example.c  example.gtkaml  example0.gtkaml  example1.gtkaml  meson.build
examples/SimpleViewer2/: Makefile  Makefile.am  SimpleViewer2.gtkaml  meson.build
examples/blitzen/: Makefile  main.vala  meson.build  test.gtkon
examples/clutter/: Makefile  full-example.gtkon  meson.build
examples/gtkaml/: Makefile  gtk-hello.gtkaml  meson.build  search-dialog.gtkaml  sync-sample.gtkaml  treeview-liststore-sample.gtkaml
examples/gtkon/: Makefile  gtk-hello.gtkon  meson.build  search-dialog.gtkon  sync-sample.gtkon  treeview-liststore-sample.gtkon
examples/tutorial/: Makefile
examples/vala/: Makefile  Makefile.am  search-dialog.gtkaml
examples/vala2gtkon/: gtk-hello.gtkon  search-dialog.gtkon  sync-sample.gtkon
gtkamlc/: GtkamlCodeGenerator.vala  Makefile.am
libgtkaml/: Makefile.am  config.vapi  gtkaml-1.0.deps  gtkaml-1.0.deps.in  gtkamlcodecontext.c  gtkamlcodecontext.vala  gtkamlcodeparserprovider.c  gtkamlcodeparserprovider.vala  gtkamlmarkupclass.c  gtkamlmarkupclass.vala  gtkamlmarkuphint.c  gtkamlmarkuphint.vala  gtkamlmarkuphintsstore.c  gtkamlmarkuphintsstore.vala  gtkamlmarkupnamespace.c  gtkamlmarkupnamespace.vala  gtkamlmarkupparser.c  gtkamlmarkupparser.vala  gtkamlmarkupresolver.c  gtkamlmarkupresolver.vala  gtkamlmarkupscanner.c  gtkamlmarkupscanner.vala  gtkamlpropertyspec.c  gtkamlpropertyspec.vala  gtkonparser.c  gtkonparser.vala  meson.build
libgtkaml/ast/: gtkamlmarkupattribute.c  gtkamlmarkupattribute.vala  gtkamlmarkupchildtag.c  gtkamlmarkupchildtag.vala  gtkamlmarkupcomplexattribute.c  gtkamlmarkupcomplexattribute.vala  gtkamlmarkupmember.c  gtkamlmarkupmember.vala  gtkamlmarkupreference.c  gtkamlmarkupreference.vala  gtkamlmarkuproot.c  gtkamlmarkuproot.vala  gtkamlmarkuptag.c  gtkamlmarkuptag.vala  gtkamlmarkuptemp.c  gtkamlmarkuptemp.vala  gtkamlmarkupunresolvedtag.c  gtkamlmarkupunresolvedtag.vala
libgtkaml/workarounds/: gtkamlcallable.c  gtkamlcallable.vala  gtkamldatatypeparent.c  gtkamldatatypeparent.vala  gtkamlnamespacevisitor.c  gtkamlnamespacevisitor.vala  gtkamlvalaparser.c  gtkamlvalaparser.vala
src/: GtkamlAttribute.vala  GtkamlClassDefinition.vala  GtkamlClassInfo.vala  GtkamlCodeContext.vala  GtkamlCodeGenerator.vala  GtkamlCompiler-0.10.vala  GtkamlCompiler.vala  GtkamlImplicitsResolver.vala  GtkamlImplicitsStore.vala  GtkamlMethod.vala  GtkamlMethodMatcher.vala  GtkamlParser.vala  GtkamlReferenceClassDefinition.vala  GtkamlRootClassDefinition.vala  GtkamlSAXParser.vala  GtkamlSAXParser_start_parsing.c  GtkamlSimpleAttribute.vala  GtkamlState.vala  GtkamlStateStack.vala  GtkamlXmlAttribute.vala  GtkamlXmlNamespace.vala  GtkonParser.vala  Makefile.am  gtkaml-codegenerator.c  gtkaml-codegenerator.h  gtkaml-saxparser.h  gtkamlc.h  main.c  meson.build  valacompiler-0.10.patch  valacompiler.patch
tests/: Makefile.am  bug0.gtkaml  meson.build  test0.gtkaml  test1.gtkaml  test2.gtkaml  test3.gtkaml  test4.gtkon  test5.gtkon
tests/adwaita/: Makefile.am  meson.build  smoke.gtkaml
tests/gtk3/: Makefile.am  meson.build  test4.gtkaml
tests/gtk4/: Makefile.am  meson.build  smoke.gtkaml
trunk/: ChangeLog  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  gtkaml.geany  gtkamlc.1
trunk/archlinux/: PKGBUILD
trunk/data/: Clutter.implicits  Gtk.implicits  Makefile.am  implicits.ini
trunk/debian/: changelog  control  gtkaml.substvars  rules
trunk/editors/vim/: gtkon.vim
trunk/examples/: Makefile.am  example.c  example.gtkaml  example0.gtkaml  example1.gtkaml
trunk/examples/SimpleViewer2/: Makefile  Makefile.am  SimpleViewer2.gtkaml
trunk/examples/blitzen/: blitzen.conf  test.gtkon
trunk/examples/clutter/: full-example.gtkon
trunk/examples/gtkaml/: gtk-hello.gtkaml  search-dialog.gtkaml  sync-sample.gtkaml  treeview-liststore-sample.gtkaml
trunk/examples/gtkon/: Makefile  gtk-hello.gtkon  search-dialog.gtkon  sync-sample.gtkon
trunk/examples/tutorial/: tutorial.gtkaml
trunk/examples/vala/: gtk-hello.gtkaml  search-dialog.gtkaml  sync-sample.gtkaml  treeview-liststore-sample.gtkaml
trunk/examples/vala2gtkaml/: Makefile
trunk/examples/vala2gtkon/: treeview-liststore-sample.gtkon
trunk/gtkamlc/: GtkamlCompiler.vala  GtkamlSAXParser.vala  Makefile.am
trunk/simple/: Makefile  gtkml.vala  gtkon.vala  test0.gtkml
trunk/src/: GtkamlAttribute.vala  GtkamlClassDefinition.vala  GtkamlClassInfo.vala  GtkamlCodeContext.vala  GtkamlCodeGenerator.vala  GtkamlCompiler-0.10.vala  GtkamlCompiler.vala  GtkamlComplexAttribute.vala  GtkamlImplicitsResolver.vala  GtkamlImplicitsStore.vala  GtkamlMethod.vala  GtkamlMethodMatcher.vala  GtkamlParser.vala  GtkamlParser_resume_parsing.c  GtkamlReferenceClassDefinition.vala  GtkamlRootClassDefinition.vala  GtkamlSAXParser.vala  GtkamlSAXParser_start_parsing.c  GtkamlState.vala  GtkamlStateStack.vala  GtkamlXmlAttribute.vala  GtkamlXmlNamespace.vala  GtkonParser.vala  Makefile.am  gtkaml-codegenerator.c  gtkaml-codegenerator.h  gtkaml-saxparser.c  gtkaml-saxparser.h  main.c  valacompiler-0.10.patch  valacompiler.patch
trunk/tests/: Makefile.am  WindowController.vala  example0.gtkaml  test0.gtkaml  test1.gtkaml  test2.gtkaml  test3.gtkaml  test4.gtkon  test5.gtkon  test6.gtkon  test7.gtkon
trunk/tutorial/: Makefile.am
trunk/valaml/: GtkamlAttribute.vala  GtkamlClassDefinition.vala  GtkamlCodeGenerator.vala  GtkamlCompiler.vala  GtkamlComplexAttribute.vala  GtkamlContainerDefinition.vala  GtkamlDummyParser.vala  GtkamlImplicitsResolver.vala  GtkamlMethod.vala  GtkamlParser.vala  GtkamlParser_resume_parsing.c  GtkamlRootClassDefinition.vala  GtkamlSAXParser.vala  GtkamlSAXParser_startParsing.c  GtkamlSAXParser_start_parsing.c  GtkamlSimpleAttribute.vala  GtkamlState.vala  GtkamlStateStack.vala  Makefile.am
tutorial/: Makefile.am  main.vala  tutorial0.gtkaml
(+41 files in other folders)
