## File created by the gnome-build tools


INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS = \
	 -Wall \
	 -g \
	 $(GTK_CFLAGS)

bin_PROGRAMS = gtkamlexamples

gtkamlexamples_SOURCES = 
	

gtkamlexamples_LDADD = \
	$(GTK_LIBS)


