custom_target(
  'example-clutter-full',
  input: 'full-example.gtkon',
  output: 'full-example.vala',
  command: [
    gtkaml_to_vala,
    gtkamlc,
    '@INPUT@',
    '@OUTPUT@',
    '--pkg',
    'gtk+-3.0',
    '--pkg',
    'clutter-gtk-1.0',
    '--pkg',
    'clutter-1.0',
    '--pkg',
    'mx-1.0',
    '--vapidir',
    meson.project_source_root() / 'markuphints',
    '--implicitsdir',
    meson.project_source_root() / 'data',
  ],
  build_by_default: true,
)
