all: gtk-hello.gtkaml search-dialog.gtkaml sync-sample.gtkaml treeview-liststore-sample.gtkaml

gtk-hello.gtkaml:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@

search-dialog.gtkaml:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@

sync-sample.gtkaml:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@

treeview-liststore-sample.gtkaml:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@


