all: gtk-hello search-dialog  sync-sample treeview-liststore-sample

gtk-hello:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@.gtkaml

search-dialog:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@.gtkaml

sync-sample:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@.gtkaml

treeview-liststore-sample:
	../../src/gtkamlc --pkg gtk+-2.0 --implicitsdir ../../data $@.gtkaml


